--- a/playbooks/run-demo.yml
+++ b/playbooks/run-demo.yml
@@ -10,13 +10,13 @@
   # - demo_username:         - e.g.: "username"
   # - demo_password:         - e.g.: "password"
   # - demo_token:            - e.g.: "OpenShift token"
-  - openshift_login_url: "{{ demo_hosting_api_fqdn }}"
+  - openshift_login_url: "{--server=https://{ demo_hosting_api_fqdn }}:6443"
   - openshift_user: "{{ demo_username }}"
   - openshift_token: "{{ demo_token }}"
   roles:
   - role: common
-  - role: ../roles/casl-ansible/roles/openshift-defaults
-  - role: ../roles/casl-ansible/roles/openshift-login
+  - role: casl-ansible/roles/openshift-defaults
+  - role: casl-ansible/roles/openshift-login
 
 - name: "Prepare the SCM for use with this demo env"
   hosts: seed-hosts
@@ -38,10 +38,9 @@
   vars:
     openshift_user: "{{ demo_username }}"
     openshift_token: "{{ demo_token }}"
-  import_playbook: ../roles/openshift-applier/playbooks/openshift-cluster-seed.yml
+  import_playbook: ../../requirements_roles/openshift-applier/playbooks/openshift-cluster-seed.yml
 
 - name: "Demo prep clean-up"
   hosts: seed-hosts
   roles:
   - role: cleanup
-
